[package]
name = "key_checker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2"] }
tokio = { version = "1", features = ["full"] }
mimalloc = "0.1"
futures = { version = "0.3", features = ["thread-pool"] }
async-channel = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.11.0"
prometheus = "0.14"
tracing = "0.1"
warp = { version = "0.4", features = ["server"] }
num_cpus = "1.17"
tracing-subscriber = "0.3.22"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true # Reduce binary size
